--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,6 @@ address {
   background-position: center;
   background-size: cover;
   background-clip: padding-box;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.page-hero:hover,
-.page-hero:focus {
-  background-image: url(/images/background-hero.jpg);
 }
 
 .host-title {
@@ -197,6 +191,7 @@ address {
   margin-right: auto;
   border: none;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-block:hover,
@@ -383,8 +378,8 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-overlay:hover,
-.portfolio-overlay:focus {
+.text-overlay:hover,
+.text-overlay:focus {
   transform: translateY(0%);
 }
 
