--- a/css/styles.css
+++ b/css/styles.css
@@ -378,8 +378,8 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.text-overlay:hover,
-.text-overlay:focus {
+.menu-item-portfolio:hover,
+.menu-item-portfolio:focus {
   transform: translateY(0%);
 }
 
