--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,8 @@ address {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-item-portfolio:hover {
+.menu-item-portfolio:hover,
+.menu-item-portfolio:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -378,8 +379,7 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-item-portfolio:hover,
-.menu-item-portfolio:focus {
+.menu-item-portfolio:hover .text-overlay {
   transform: translateY(0%);
 }
 
